# small-language

./: CMakeLists.txt  example.sl
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  error.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser.y  rt.c  stringHelper.h  token.h  type.cpp  type.h
